[workspace]
members = ["rlgymppo", "rlgymppo-wandb", "rlgymppo-tui", "rlgymppo-trainer"]
resolver = "2"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[patch."https://github.com/ZealanL/RocketSim.git"]
rocketsim = { git = "https://github.com/VirxEC/RocketSim.git", branch = "col_test" }
