[workspace]
resolver = "2"
members = [
  "rlgymppo",
  "rlgymppo-model",
  "rlgymppo-rlbot",
  "rlgymppo-trainer",
  "rlgymppo-tui",
  "rlgymppo-utils",
  "rlgymppo-wandb",
]

[workspace.dependencies]
arrayvec = "0.7.6"
crossterm = "0.29"
rand = "0.10.1"
rlgym = { git = "https://github.com/VirxEC/rlgym_rs.git", branch = "native-rust" }
rustc-hash = "2.1.1"
thiserror = "2.0.18"

[patch."https://github.com/ZealanL/RocketSim.git"]
rocketsim = { git = "https://github.com/VirxEC/RocketSim.git", branch = "fix-jump" }

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
