[package]
name = "rlgymppo-model"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "=0.21.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"

[dev-dependencies]
burn = {
  version = "=0.21.0",
  default-features = false,
  features = ["flex", "std"]
}
tempfile = "3.20.0"
