[package]
name = "rlgymppo-model"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, default-features = false, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
burn = {
  workspace = true,
  default-features = false,
  features = ["flex", "std"]
}
tempfile = "3.20.0"
