[package]
name = "rlgymppo-trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.21.0", features = ["autodiff"] }
rand = "0.10.1"
rlgym = { git = "https://github.com/VirxEC/rlgym_rs.git", branch = "native-rust" }
rlgymppo = { path = "../rlgymppo", default-features = false }

[[example]]
name = "run"
required-features = ["backend"]

[features]
default = ["wandb", "tui", "torch"]
backend = []
wandb = ["rlgymppo/wandb"]
tui = ["rlgymppo/tui"]

candle = ["backend", "burn/candle"]
cuda = ["backend", "burn/cuda"]
flex = ["backend", "burn/flex"]
metal = ["backend", "burn/metal"]
rocm = ["backend", "burn/rocm"]
torch = ["backend", "burn/tch"]
wgpu = ["backend", "burn/wgpu"]
