[package]
name = "rlgymppo-trainer"
version = "0.1.0"
edition = "2024"

[[example]]
name = "run"
required-features = ["backend"]

[dependencies]
burn = { version = "0.21.0", features = ["autodiff"] }
rand = "0.10.1"
rlgymppo = { path = "../rlgymppo", default-features = false }

[features]
default = ["wandb", "tui", "torch"]
backend = []
tui = ["rlgymppo/tui"]
wandb = ["rlgymppo/wandb"]

candle = ["backend", "burn/candle"]
cuda = ["backend", "burn/cuda"]
flex = ["backend", "burn/flex"]
metal = ["backend", "burn/metal"]
rocm = ["backend", "burn/rocm"]
torch = ["backend", "burn/tch"]
wgpu = ["backend", "burn/wgpu"]
