[package]
name = "rlgymppo"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
burn = { version = "0.21.0", features = ["autodiff"] }
crossterm = { version = "0.29", optional = true }
hashbrown = "0.16.1"
itertools = "0.15.0"
parking_lot = "0.12.4"
rand = "0.10.1"
ringbuffer = "0.16.0"
rlgym = {
  git = "https://github.com/VirxEC/rlgym_rs.git",
  branch = "native-rust"
}
rlgymppo-model = { path = "../rlgymppo-model" }
rlgymppo-tui = { path = "../rlgymppo-tui", optional = true }
rlgymppo-utils = { path = "../rlgymppo-utils" }
rlgymppo-wandb = { path = "../rlgymppo-wandb", optional = true }
rustc-hash = "2.1.1"
serde = { version = "1.0.208", features = ["derive"] }
toml = { version = "1.1.2", features = ["preserve_order"] }

[features]
default = ["tui", "wandb"]
tui = ["dep:crossterm", "dep:rlgymppo-tui"]
wandb = ["dep:rlgymppo-wandb"]

fusion = ["burn/fusion"]

# backends
candle = ["burn/candle"]
cuda = ["burn/cuda"]
flex = ["burn/flex"]
metal = ["burn/metal"]
rocm = ["burn/rocm"]
torch = ["burn/tch"]
wgpu = ["burn/wgpu"]
